--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </head>
 <body>
     <div class="box">
-        <form action="miojo2.html">
+        <form action="obrigado.html">
             <fieldset>
                 <legend><b>Formulário de Clientes</b></legend>
                 <br>
