--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </head>
 <body>
     <div class="box">
-        <form action="obrigado.html">
+        <form action="https://api.sheetmonkey.io/form/pLdnR6te7esEV37V6gg1Tm" method="post">
             <fieldset>
                 <legend><b>Formulário de Clientes</b></legend>
                 <br>
